# mijn-bussie-auth

./: .gitignore  API doc bypass.md  API doc.md  Cargo.toml  Endpoints toe te voegen.md  routes.md  sea-orm-cli.sh  verbeteringen.md
dashboard/: dashboard.js  index.html  style.css
docker_cargo/: config.toml
entity/src/: donation_text.rs  email_properties.rs  general_properties_db.rs  kuma_properties.rs  mod.rs  prelude.rs  user_account.rs  user_data.rs  user_properties.rs
feedback/claude/: code-review.md  logic-review.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_user.rs
src/: crypt.rs  error.rs  main.rs  prelude.rs
src/bypass/: change_password.rs  create_instance.rs  mod.rs
src/file_user/: file.rs  mod.rs  transfer.rs
src/instance_handling/: entity.rs  instance_api.rs  mod.rs  router.rs
src/instance_handling/admin/: db.rs  instance_management.rs  mod.rs  passthrough.rs
src/instance_handling/bypass/: change_password.rs  create_instance.rs  mod.rs
src/instance_handling/generic/: change_information.rs  change_password.rs  create_instance.rs  mod.rs
src/instance_handling/protected/: change_information.rs  change_password.rs  mod.rs  new_instance.rs  passthrough.rs
src/web/: api.rs  auth.rs  mod.rs  new_mijn_bussie.rs  new_user.rs  protected.rs  user.rs
src/web/admin/: account_handling.rs  find.rs  mod.rs
src/web/generic/: account_handling.rs  change_password.rs  mod.rs
src/web/protected/: account_handling.rs  information.rs  mod.rs
