[package]
name = "mijn_bussie_auth"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity"]

[dependencies]
entity = { path = "entity" }
dotenvy = "0.15.7"
simplestcrypt = "0.2.0"
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive"] }
sea-orm = { version = "2.0.0-rc.13", features = [
    "runtime-tokio",
    "sqlx-postgres",
] }
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
bcrypt = "0.17.1"
axum = { version = "0.8", features = ["macros"] }
axum-login = "0.18"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0.145"
