[package]
name = "mijn_bussie_auth"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity"]

[dependencies]
entity = { path = "entity" }
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = [
    "macros",
] }
simplestcrypt = "0.2.0"
base64 = "0.22.1"
sea-orm = { version = "2.0.0-rc.13", features = [
    "runtime-tokio",
    "sqlx-postgres",
] }
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
bcrypt = "0.17.1"
axum = { version = "0.8", features = ["macros"] }
axum-login = "0.18"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0.145"
random_str = "0.1.2"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["default-tls"] }
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
rustls = { version = "0.23.35", features = ["ring"] }

hyper = "=1.7.0"
